--- a/content/certification.html
+++ b/content/certification.html
@@ -91,21 +91,9 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <h3>About LPI</h3>
-<p>
-  The Linux Professional Institute (LPI) is an internationally recognised,
-  vendor-independent organisation advocating and assisting the professional
-  use of Linux, Open Source and Free Software, through the certification of
-  Linux professionals.
-  Established as a non-profit organisation in 1999, LPI is community-based and
-  -supported.
-  LPI’s certification program is delivered worldwide in multiple languages at
-  over 7,000 testing locations and is supported by an affiliate network spanning
-  five continents.
-</p>
-<p>
-  Since the program’s inception, LPI has delivered over 300,000 exams and
-  100,000+ LPIC certifications around the world.
-</p>
+<% lpi = speaker 'lpi_team' %>
+<%= lpi[:abstract] %>
+<%= lpi[:description] %>
 
 <hr/>
 
@@ -146,18 +134,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <h3>About BSDCG</h3>
-<p>
-  The BSD Certification Group (BSDCG) is a non-profit organization committed to
-  creating and maintaining a global certification standard for system
-  administration on BSD based operating systems.
-  The BSDCG works with the BSD and sysadmin communities in order to provide a
-  practical and relevant certification.
-</p>
+<% bsdcg = speaker 'bsdcg_team' %>
+<%= bsdcg[:abstract] %>
+<%= bsdcg[:description] %>
 
-<p>
-  The BSDA certification is designed to be an entry-level certification on BSD
-  Unix systems administration.
-  The successful BSDA candidate is able to complete common administrative and
-  troubleshooting tasks and has a good understanding of general BSD Unix and
-  networking principles.
-</p>
