add link to list of all sessions + list of all speakers

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -56,6 +56,10 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <a href="#lightningtalks">lightning talks</a> and
   <a href="#certification">certification exams</a>.
 </p>
+<p>
+For a complete (but crowded) overview, there is also a <a href="page:/schedule/events">page that lists all sessions</a>.<br/>
+A <a href="page:/schedule/speakers">list of all speakers</a> is available, too.
+</p>
 
 <a name="keynotes"></a>
 <h3>Keynotes</h3>
