--- a/content/certification.html
+++ b/content/certification.html
@@ -1,5 +1,5 @@
 ---
-title: Certification Exams
+title: Certification exams
 ---
 <%
 # vim: et ft=eruby sw=2 ts=2
@@ -84,11 +84,27 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </table>
 
 <h3>Registration procedure</h3>
-<p>
-  <span class="label label-info">
-    The registration procedure is yet to be announced.
-  </span>
-</p>
+<ul>
+  <li>
+    Register for an LPI ID on the following website:<br/>
+    <a href="https://cs.lpi.org/caf/Xamman/register">
+    https://cs.lpi.org/caf/Xamman/register</a>
+  </li>
+  <li>
+    Sign up for a specific exam session at:<br/>
+    <a href="http://lpievent.lpice.eu/">
+    http://lpievent.lpice.eu/</a><br/>
+    Note that due to limited seating, there is a maximum of
+    50 candidates per session.
+  </li>
+  <li>
+    You must bring valid photo identification and your LPI
+    ID to the exam lab.
+  </li>
+  <li>
+    Pay for the exam at FOSDEM (in cash).
+  </li>
+</ul>
 
 <h3>About LPI</h3>
 <% lpi = speaker 'lpi_team' %>
@@ -99,7 +115,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 
 <img src="asset:bsdcg-logo" alt=""
   style="float:right; margin-left: 1em; margin-right: 1em;"/>
-<h2>BSD Associate Certification</h2>
+<h2>BSD Associate certification</h2>
 <p>
   The BSD Certification Group (BSDCG) will offer the BSDA certification exam
   to attendees of <%= conference()[:title] %>.
@@ -107,14 +123,33 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <p>
-  The exam will be paper based and in English.
-  Exam information is available from the <a
-  href="http://www.bsdcertification.org/certification/">certification page of
-  the BSDCG website</a>.
   Exam candidates should be proficient in the BSDA Certification Requirements
   and the Command Reference, both of which are available for free download from
-  this page of the website.
+  the <a href="http://www.bsdcertification.org/certification/">certification
+  page of the BSDCG website</a>.
 </p>
+
+<p>
+  The following exam is offered.
+  The exam will be paper based and in English.
+</p>
+
+<table class="table table-striped table-bordered table-condensed">
+  <thead>
+    <tr>
+      <th>Certification</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <a href="http://www.bsdcertification.org/certification/certification/bsd-associate">BSD Associate</a>
+      </td>
+      <td>$ 75.00</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3>Registration procedure</h3>
 <p>
