add link to certification page on schedule page

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -288,6 +288,9 @@ A <a href="page:/schedule/speakers">list of all speakers</a> is available, too.
   Several certification organizations provide FOSDEM visitors with the
   opportunity of taking certification exams during the conference.
 </p>
+<p>
+  Further details are available on the <a href="page:/certification/">certification page</a>.
+</p>
 <% unless certs.empty? %>
   <%
     h = {}
