--- a/content/certification.html
+++ b/content/certification.html
@@ -32,6 +32,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 
 <img src="asset:lpi-big" alt=""
     style="float:right; margin-left: 1em; margin-right: 1em;"/>
+<a name="lpi"></a>
 <h2>LPI offers discounted certification exams at <%= conference()[:title] %>.</h2>
 <p>
   As in previous years, the Linux Professional Institute, will again offer a
@@ -113,6 +114,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 
 <hr/>
 
+<a name="bsdcg"></a>
 <img src="asset:bsdcg-logo" alt=""
   style="float:right; margin-left: 1em; margin-right: 1em;"/>
 <h2>BSD Associate certification</h2>
