sightseeing: move to /practical
We should do a bit more thinking about "namespaces" on the website in
general.  I don't feel we should try to pack everything in our top-level
namespace just because we can.  Happily, the "Aliases" keyword in nanoc
makes it easy to move pages around.

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -12,4 +12,5 @@ navcat: true
     <li><%= l('/practical/beerevent/') %></li>
     <li><%= l('/practical/services/', 'Services') %></li>
     <li><%= l('/practical/catering/') %></li>
+    <li><%= l('/practical/sightseeing/') %></li>
 </ul>
