--- a/content/practical/sightseeing.html
+++ b/content/practical/sightseeing.html
@@ -7,27 +7,37 @@ aliases: /sightseeing
     <img src="asset:sightseeing-cathedral"/>
     <span>&copy; <a href="http://creativecommons.org/licenses/by/2.0/" rel="license">CC-BY-2.0</a> by <a href="https://secure.flickr.com/photos/brighton/4424281095/">Jim Linwood</a></span>
 </div>
-<p>Starting in 2009, FOSDEM has hired professional guides each year to
-offer free guided tours of Brussels to the spouses/partners of FOSDEM
-visitors. If your partner would like to accompany you to Brussels but is
-not interested in the FOSDEM conference, this will make their stay
-worthwhile. Brussels has a rich historical past and a
-cosmopolitan present.</p>
 
-<p>The <em>free tours</em> will take place on both afternoons of the conference.
-Each tour will give you a view of a different part of the city, and the
-tours offered this year will be different from those offered in previous years.
-The guides will gather participants at a meeting point on the Solbosch 
-campus (where exactly is yet to be announced), and every tour ends there
-as well.</p>
+<p>
+  Starting in 2009, FOSDEM has hired professional guides each year to offer free
+  guided tours of Brussels to the spouses/partners of FOSDEM visitors.
+  If your partner would like to accompany you to Brussels but is not interested
+  in the FOSDEM conference, this will make their stay worthwhile.
+  Brussels has a rich historical past and a cosmopolitan present.
+</p>
 
-<p>The tour on Saturday starts at 14:00 and ends at 18:30.</p>
-<p>The tour on Sunday starts at 12:15 and ends at 15:45, to make sure everyone
-is back on campus at 16:00.</p>
+<p>
+  The <em>free tours</em> will take place on both afternoons of the conference.
+  Each tour will give you a view of a different part of the city, and the tours
+  offered this year will be different from those offered in previous years.
+  The guides will gather participants at a meeting point on the Solbosch campus
+  (where exactly is yet to be announced), and every tour ends there as well.
+</p>
 
-<p>The guides are from the organization
+<p>
+  The tour on Saturday starts at 14:00 and ends at 18:30.
+</p>
+
+<p>
+  The tour on Sunday starts at 12:15 and ends at 15:45, to make sure everyone is
+  back on campus at 16:00.
+</p>
+
+<p>
+  The guides are from the organization
 <a href="http://www.brukselbinnenstebuiten.be/bruksel/index.php/in-english.html">Brukselbinnenstebuiten</a>
-(= &quot;Brussels inside out&quot;).</p>
+(= &quot;Brussels inside out&quot;).
+</p>
 
 <br style="clear:both;"/>
 <br style="margin-bottom: 1em;"/>
@@ -37,16 +47,22 @@ is back on campus at 16:00.</p>
     <span>&copy; <a href="http://creativecommons.org/licenses/by/2.0/" rel="license">CC-BY-2.0</a> by <a href="https://secure.flickr.com/photos/maltesenwordpresscom/953983994/">Maltesen</a></span>
 </div>
 
-<p>Children are welcome to join, but bear in mind that these are walking 
-tours, and that it is February. Your children must be old enough to walk
-around for three hours in winter temperatures (the responsibility is
-entirely yours).</p>
+<p>
+  Children are welcome to join, but bear in mind that these are walking tours,
+  and that it is February.
+  Your children must be old enough to walk around for three hours in winter
+  temperatures (the responsibility is entirely yours).
+</p>
 
-<p>To make sure we know how many people to expect, please send an
-e-mail to tour@fosdem.org to register for these tours (you can join the
-tour on  Saturday, Sunday or both).</p>
+<p>
+  To make sure we know how many people to expect, please send an e-mail to
+  tour@fosdem.org to register for these tours (you can join the tour on
+  Saturday, Sunday or both).
+</p>
 
-<p>There is a maximum of 30 to 40 participants.</p>
+<p>
+  There is a maximum of 30 to 40 participants.
+</p>
 
 <br style="clear:both;"/>
 <br style="margin-bottom: 1em;"/>
@@ -61,8 +77,9 @@ The destinations of the sightseeing tours for <%= conference[:title] %>
 are yet to be announced.
 </div>
 
-<p>To register, or if you have any questions about the sightseeing tours, 
-please mail <a href="mailto:tour@fosdem.org">tour@fosdem.org</a>.</p>
+<p>
+  To register, or if you have any questions about the sightseeing tours, please
+  mail <a href="mailto:tour@fosdem.org">tour@fosdem.org</a>.
+</p>
 
 <br style="clear:both;"/>
-
