sightseeing: turn tabular data into a table

--- a/content/practical/sightseeing.html
+++ b/content/practical/sightseeing.html
@@ -24,20 +24,43 @@ aliases: /sightseeing
   (where exactly is yet to be announced), and every tour ends there as well.
 </p>
 
+<div class="container-fluid">
+<div class="row-fluid">
+<div class="span6">
+
+<table class="table table-condensed table-striped table-bordered">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Meeting point</th>
+      <th>Start</th>
+      <th>End</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Saturday</th>
+      <td>tba</td>
+      <td>14:00</td>
+      <td>18:30</td>
+    </tr>
+    <tr>
+      <th>Sunday</th>
+      <td>tba</td>
+      <td>12:15</td>
+      <td>15:45</td>
+    </tr>
+  </tbody>
+</table>
 <p>
-  The tour on Saturday starts at 14:00 and ends at 18:30.
+  The guides are from <a
+  href="http://www.brukselbinnenstebuiten.be/">Brukselbinnenstebuiten</a> (=
+      &quot;Brussels inside out&quot;).
 </p>
 
-<p>
-  The tour on Sunday starts at 12:15 and ends at 15:45, to make sure everyone is
-  back on campus at 16:00.
-</p>
-
-<p>
-  The guides are from the organization
-<a href="http://www.brukselbinnenstebuiten.be/bruksel/index.php/in-english.html">Brukselbinnenstebuiten</a>
-(= &quot;Brussels inside out&quot;).
-</p>
+</div>
+</div>
+</div>
 
 <br style="clear:both;"/>
 <br style="margin-bottom: 1em;"/>
