Remove too obvious part of howto

--- a/content/howto.html
+++ b/content/howto.html
@@ -153,18 +153,7 @@ PreferredAuthentications gssapi-with-mic
 </p>
 
 <p>
-  To clone the sources initially, create a working directory on your local
-  system, e.g.:
-</p>
-<pre>mkdir -p ~/src/projects/fosdem</pre>
-
-<p>
-  Then change to that directory using
-</p>
-<pre>cd ~/src/projects/fosdem</pre>
-
-<p>
-  Now use <code>git</code> to clone the repository:
+  Use <code>git</code> to clone the repository:
 </p>
 <pre>git clone git@git.fosdem.org:/srv/git/website.git</pre>
 
