Revert "Git clone should use own username"
This reverts commit 1fd4c062ade8ef573b8d793d4a28d19f16f84b0d.

Not everyone has shell accounts on apeiron.fosdem.org.  People who
just need to edit the website are in the git user's .k5login.  In
other words: yes, you do need to clone (and push, and pull) as git,
not as your own user, unless you have a shell account.

Even if you have a shell account, you can still use git@.

--- a/content/howto.html
+++ b/content/howto.html
@@ -155,7 +155,7 @@ PreferredAuthentications gssapi-with-mic
 <p>
   Use <code>git</code> to clone the repository:
 </p>
-<pre>git clone git.fosdem.org:/srv/git/website.git</pre>
+<pre>git clone git@git.fosdem.org:/srv/git/website.git</pre>
 
 <p>
   Finally, go to the subdirectory <code class="dir">website/</code> that has
