Howto: add paragraph stating that you still need to install stuff when on nanoc.fosdem.org

--- a/content/howto.html
+++ b/content/howto.html
@@ -116,6 +116,11 @@ PreferredAuthentications gssapi-with-mic
   These instructions assume that you want to work on one of your own machines.
   If you prefer not to install a whole Ruby/RVM toolchain on one of your
   own machines, we can give you an account on <code>nanoc.fosdem.org</code>.
+</p>
+<p>
+  Note that even when using an account on <code>nanoc.fosdem.org</code>, you will have to install RVM and Nanoc as described in sections 1.2 and 1.3.
+</p>
+<p>
   In order to be able to access <code>git</code> and to push the website,
   you will need to make sure that your Kerberos ticket is <em>forwarded</em>
   when you log in.
